--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,28 @@
-:root {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+.blurred {
+  filter: blur(4px); /* Adjust the blur intensity as needed */
+}
+
+:root{
+  background-color:#101629 ;
+  height:100vh;
+  color: aqua;
+}
+
+body {
+  margin: 0;
+  overflow: hidden;
+}
+
+.scrollable {
+  overflow: auto;
+}
+
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +128,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
